<resources>
    <string name="app_name">SplashScreen</string>
    <string name="Registration_link"><u>Not Registered? Click Here</u>.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="save">Save</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home__bottom">Home_Bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Cart</string>
    <!--<string name="title_notifications">Notifications</string>-->
    <string name="title_seller">Seller</string>
    <string name="title_orderhistory">Order History</string>
    <string name="title_myfooditems">My Food Items</string>
    <string name="title_logout" />
</resources>
