<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.MaaKaKhana.ui.login_home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_loginhome" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.MaaKaKhana.ui.cart.CartFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.example.MaaKaKhana.ui.seller.SellerFragment"
        android:label="@string/title_seller"
        tools:layout="@layout/fragment_seller" />

    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.example.MaaKaKhana.ui.logout.LogoutFragment"
        android:label="@string/title_logout" />

    <fragment
        android:id="@+id/navigation_orderhistory"
        android:name="com.example.MaaKaKhana.ui.OrderHistory.OrderHistoryFragment"
        android:label="@string/title_orderhistory" />

</navigation>