<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_drawer_navigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.MaaKaKhana.ui.login_home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_loginhome" />
    
    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.example.MaaKaKhana.ui.seller.SellerFragment"
        android:label="@string/title_seller"
        tools:layout="@layout/fragment_seller" />

    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.example.MaaKaKhana.ui.logout.LogoutFragment"
        android:label="@string/title_logout" />

</navigation>