<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.MaaKaKhana.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.MaaKaKhana.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />


    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.example.MaaKaKhana.ui.ui.fav.FavFragment"
        android:label="@string/title_fav"
        tools:layout="@layout/fragment_fav" />

    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.example.MaaKaKhana.ui.logout.LogoutFragment"
        android:label="@string/title_logout" />

</navigation>